modules/iptables/firewall-apf
# Generated by iptables-save v1.4.7 on Sun Jun 14 16:39:24 2015
*security
:INPUT ACCEPT [378:144349]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [337:140452]
COMMIT
# Completed on Sun Jun 14 16:39:24 2015
# Generated by iptables-save v1.4.7 on Sun Jun 14 16:39:24 2015
*raw
:PREROUTING ACCEPT [379:144389]
:OUTPUT ACCEPT [337:140452]
COMMIT
# Completed on Sun Jun 14 16:39:24 2015
# Generated by iptables-save v1.4.7 on Sun Jun 14 16:39:24 2015
*nat
:PREROUTING ACCEPT [1:40]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [41:2326]
:POSTROUTING ACCEPT [41:2326]
COMMIT
# Completed on Sun Jun 14 16:39:24 2015
# Generated by iptables-save v1.4.7 on Sun Jun 14 16:39:24 2015
*mangle
:PREROUTING ACCEPT [379:144389]
:INPUT ACCEPT [379:144389]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [337:140452]
:POSTROUTING ACCEPT [337:140452]
-A PREROUTING -p tcp -m tcp --sport 512:65535 -j TOS --set-tos 0x00/0xff 
-A PREROUTING -p udp -m udp --sport 512:65535 -j TOS --set-tos 0x00/0xff 
-A POSTROUTING -p tcp -m tcp --dport 512:65535 -j TOS --set-tos 0x00/0xff 
-A POSTROUTING -p udp -m udp --dport 512:65535 -j TOS --set-tos 0x00/0xff 
COMMIT
# Completed on Sun Jun 14 16:39:24 2015
# Generated by iptables-save v1.4.7 on Sun Jun 14 16:39:24 2015
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:PROHIBIT - [0:0]
:REFRESH_TEMP - [0:0]
:RESET - [0:0]
:TALLOW - [0:0]
:TDENY - [0:0]
:TGALLOW - [0:0]
:TGDENY - [0:0]
-A INPUT -i lo -j ACCEPT 
-A INPUT -j REFRESH_TEMP 
-A INPUT -j TALLOW 
-A INPUT -j TDENY 
-A INPUT -j TGALLOW 
-A INPUT -j TGDENY 
-A INPUT -p icmp -m limit --limit 30/sec -j ACCEPT 
-A INPUT -p tcp -m tcp ! --tcp-flags FIN,SYN,RST,ACK SYN -m state --state NEW -j DROP 
-A INPUT -p tcp -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A INPUT -p udp -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A INPUT -s 72.14.179.5/32 -p udp -m udp --sport 53 --dport 1023:65535 -j ACCEPT 
-A INPUT -s 72.14.179.5/32 -p tcp -m tcp --sport 53 --dport 1023:65535 -j ACCEPT 
-A INPUT -p tcp -m tcp --sport 53 --dport 1023:65535 -j DROP 
-A INPUT -p udp -m udp --sport 53 --dport 1023:65535 -j DROP 
-A INPUT -s 72.14.188.5/32 -p udp -m udp --sport 53 --dport 1023:65535 -j ACCEPT 
-A INPUT -s 72.14.188.5/32 -p tcp -m tcp --sport 53 --dport 1023:65535 -j ACCEPT 
-A INPUT -p tcp -m tcp --sport 53 --dport 1023:65535 -j DROP 
-A INPUT -p udp -m udp --sport 53 --dport 1023:65535 -j DROP 
-A INPUT -p tcp -j DROP 
-A INPUT -p udp -j DROP 
-A INPUT -j DROP 
-A OUTPUT -o lo -j ACCEPT 
-A OUTPUT -p tcp -m tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu 
-A OUTPUT -j REFRESH_TEMP 
-A OUTPUT -j TALLOW 
-A OUTPUT -j TDENY 
-A OUTPUT -j TGALLOW 
-A OUTPUT -j TGDENY 
-A OUTPUT -p tcp -m tcp --dport 1024:65535 -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A OUTPUT -p udp -m udp --dport 1024:65535 -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A OUTPUT -d 72.14.179.5/32 -p udp -m udp --sport 1023:65535 --dport 53 -j ACCEPT 
-A OUTPUT -d 72.14.179.5/32 -p tcp -m tcp --sport 1023:65535 --dport 53 -j ACCEPT 
-A OUTPUT -d 72.14.179.5/32 -p udp -m udp --sport 1023:65535 --dport 53 -j ACCEPT 
-A OUTPUT -d 72.14.179.5/32 -p tcp -m tcp --sport 1023:65535 --dport 53 -j ACCEPT 
-A OUTPUT -d 72.14.188.5/32 -p udp -m udp --sport 1023:65535 --dport 53 -j ACCEPT 
-A OUTPUT -d 72.14.188.5/32 -p tcp -m tcp --sport 1023:65535 --dport 53 -j ACCEPT 
-A OUTPUT -d 72.14.188.5/32 -p udp -m udp --sport 1023:65535 --dport 53 -j ACCEPT 
-A OUTPUT -d 72.14.188.5/32 -p tcp -m tcp --sport 1023:65535 --dport 53 -j ACCEPT 
-A OUTPUT -j ACCEPT 
-A PROHIBIT -j REJECT --reject-with icmp-host-prohibited 
-A RESET -p tcp -j REJECT --reject-with tcp-reset 
-A TALLOW -s 127.0.0.1/32 -j ACCEPT 
-A TALLOW -d 127.0.0.1/32 -j ACCEPT 
-A TALLOW -s 45.56.124.36/32 -j ACCEPT 
-A TALLOW -d 45.56.124.36/32 -j ACCEPT 
-A TDENY -s 123.123.123.123/32 -j DROP 
-A TDENY -d 123.123.123.123/32 -j DROP 
COMMIT
# Completed on Sun Jun 14 16:39:24 2015
